advanced-istio-e-commerce/istio-config/peerauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: ecommerce-mtls-peerauthentication
spec:
  mtls:
    mode: STRICT
