advanced-istio-e-commerce/istio-config/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: user-accounts-destinationrule
spec:
  host: user-accounts-service
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
