advanced-istio-e-commerce/istio-config/authorizationpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: shopping-cart-authorizationpolicy
spec:
  selector:
    matchLabels:
      app: shopping-cart-service
  action: ALLOW
  rules:
  - to:
    - operation:
        methods: ["GET", "POST"]
